Fixed issues with  HTML/CSS/JS for tables where tables were expanding after pressing a button, Added more queries to fill in drop down menus and the charts for order_details/orders/reviews, modified DML files to be more consistent and readable

--- a/static/styles.css
+++ b/static/styles.css
@@ -3,15 +3,32 @@ tr:nth-child(even) {
 }
 
 .table {
-    border-spacing: 0;
     margin: 1rem;
-    background-color: f5f5f5;
+    border: 1px solid black;
+ 
 }
 
 .table_header {
     text-align: left;
+    border: 1px solid black;
+
 }
 
 .table_cell {
     padding: 8px;
+    border: 1px solid black;
+
+}
+
+
+#create {
+    display: none;
+}
+
+#update {
+    display: none;
+}
+
+#delete {
+    display: none;
 }
